+++++++++++
Python News
+++++++++++

What's New in Python 3.3.5 release candidate 1?
===============================================

*Release date: XXXX-XX-XX*

Core and Builtins
-----------------

- Issue #20588: Make Python-ast.c C89 compliant.

- Issue #20437: Fixed 21 potential bugs when deleting objects references.

- Issue #20538: UTF-7 incremental decoder produced inconsistant string when
  input was truncated in BASE64 section.

Library
-------

- Issue #20635: Fixed grid_columnconfigure() and grid_rowconfigure() methods of
  Tkinter widgets to work in wantobjects=True mode.

- Issue #19612: On Windows, subprocess.Popen.communicate() now ignores
  OSError(22, 'Invalid argument') when writing input data into stdin, whereas
  the process already exited.

- Issue #6815: os.path.expandvars() now supports non-ASCII environment
  variables names and values.

- Issue #17671: Fixed a crash when use non-initialized io.BufferedRWPair.
  Based on patch by Stephen Tu.

- Issue #8478: Untokenizer.compat processes first token from iterator input.
  Patch based on lines from Georg Brandl, Eric Snow, and Gareth Rees.

- Issue #20594: Avoid name clash with the libc function posix_close.

- Issue #19856: shutil.move() failed to move a directory to other directory
  on Windows if source name ends with os.altsep.

- Issue #14983: email.generator now always adds a line end after each MIME
  boundary marker, instead of doing so only when there is an epilogue.  This
  fixes an RFC compliance bug and solves an issue with signed MIME parts.

- Issue #20540: Fix a performance regression (vs. Python 3.2) when layering
  a multiprocessing Connection over a TCP socket.  For small payloads, Nagle's
  algorithm would introduce idle delays before the entire transmission of a
  message.

- Issue #16983: the new email header parsing code will now decode encoded words
  that are (incorrectly) surrounded by quotes, and register a defect.
